2008-03-27  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.cc (compare_package_installed_names): Don't call to
	compare_system_updates in order not to make the OS package to be
	always on top of a packages list under a view different than
	"Check for updates" view (83096).
	(compare_package_installed_versions): Likewise (83096).
	(compare_package_installed_sizes): Likewise (83096).

2008-03-26  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.cc (global_package_list_key_pressed): Avoid jumping to
	the breadcrumb trail when pressing the down hardkey while in the last
	item of the packages list (N80270).

2008-03-25  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.7

	Added the apt-worker "rescue" command.

	* src/apt-worker-bin.cc (save_operation_record)
	(erase_operation_record, read_operation_record)
	(CURRENT_OPERATION_FILE): New, for keeping a journal of the
	current operation.
	(cmd_install_package): Use them.
	(operation): Added optional "allow_download" and "with_status"
	parameter.  Call set_dir_cache_archives unconditionally.  Call
	sync() after downloading so that we have a better chance of
	finding all packages when rescuing this operation.
	(run_system, rescue_operation_with_dir, rescue_operation_with_dev)
	(rescue_operation_with_devnode, rescue_with_all_devs)
	(rescue_with_all_devnodes, show_fb_text, show_fb_status)
	(interpret_pmstatus, fork_progress_process, do_rescue)
	(cmdline_rescue): New.
	(usage, main): Recognize "rescue" command and call cmdline_rescue
	for it.

	* src/util.cc (entertainment_subtitles): New, to control which
	variant of the entertainment dialog is used.
	(entertainment_update_title, start_entertaining_users): Use it
	instead of red_pill_mode.

	* src/menu.cc (create_menu): Remove unused GError variable.

	* src/operations.cc (ip_reboot): Use a information banner instead
	of a information note to announce the imminent restart.

2008-03-25  Felipe Erias Morandeira  <femorandeira@maemo.org>
